# backend/src/TodoApi.Gateway/openapi.json
@@ -55,6 +55,28 @@
             }
           }
         }
+      },
+      "get": {
+        "tags": [
+          "Todos"
+        ],
+        "summary": "List all to-do items",
+        "operationId": "ListTodos",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Response"
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     }
   },
